# container-watch-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md
.github/workflows/: ci.yml
assets/: .gitkeep
src/: lib.rs  main.rs  ssh_util.rs
src/config/: mod.rs
src/exec/: mod.rs
src/models/: mod.rs
src/session/: mod.rs
src/ssh_docker/: mod.rs
src/ui/: mod.rs
ui/: app-window.slint  widgets.slint
