[package]
name = "script-reloader"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Docker container management over SSH (Windows Slint GUI)"
authors = ["Kevyn Watkins"]
rust-version = "1.75"

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
